--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://root:xxeT5wN2KyEDEpZqqZdAI0MB0663ZyNJ@dpg-cvc1ig5umphs73cfofk0-a.oregon-postgres.render.com/bp_tlcv
+DATABASE_URL=postgresql://bp_3oc5_user:TdRcXaKRpwZc4zsJlic52AghoNiHTvPi@dpg-cvuuvdh5pdvs73brt1d0-a.oregon-postgres.render.com/bp_3oc5
