--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://bp_3oc5_user:TdRcXaKRpwZc4zsJlic52AghoNiHTvPi@dpg-cvuuvdh5pdvs73brt1d0-a.oregon-postgres.render.com/bp_3oc5
+DATABASE_URL=postgresql://root:twLKXrbJO3uVxjSFQ9juIVYddIxgNh34@dpg-cvuv4095pdvs73bs1210-a.oregon-postgres.render.com/bp_zxuc
