--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://root:twLKXrbJO3uVxjSFQ9juIVYddIxgNh34@dpg-cvuv4095pdvs73bs1210-a.oregon-postgres.render.com/bp_zxuc?sslmode=require
+DATABASE_URL=postgresql://root:twLKXrbJO3uVxjSFQ9juIVYddIxgNh34@dpg-cvuv4095pdvs73bs1210-a.oregon-postgres.render.com:5432/bp_zxuc?sslmode=require
